--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yuyuexl",
+  "name": "yuyuexl.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,8 +13,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "concurrently": "^3.5.1"
   }
 }
