--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "koa": "^2.5.0"
+    "config": "^1.30.0",
+    "koa": "^2.5.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-morgan": "^1.0.1",
+    "koa-route": "^3.2.0",
+    "log4js": "^2.5.3"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "node server",
+    "server": "node bin/www",
     "client": "node client"
   },
   "devDependencies": {
