--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "node bin/www",
+    "server": "node server",
     "client": "node client"
   },
   "devDependencies": {
