--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "private": true,
     "dependencies": {
         "config": "^1.30.0",
+        "dotenv": "^5.0.1",
+        "jsonwebtoken": "^8.2.0",
         "koa": "^2.5.0",
         "koa-bodyparser": "^4.2.0",
         "koa-jwt": "^3.3.0",
         "koa-morgan": "^1.0.1",
-        "koa-route": "^3.2.0",
+        "koa-router": "^7.4.0",
         "log4js": "^2.5.3",
         "lowdb": "^1.0.0"
     },
